Removed quotes from temp

--- a/telegraf/telegraf.template.conf
+++ b/telegraf/telegraf.template.conf
@@ -35,8 +35,7 @@
   ## For failed writes, telegraf will cache metric_buffer_limit metrics for each
   ## output, and will flush this buffer on a successful write. Oldest metrics
   ## are dropped first when this buffer fills.
-  metric_buffer_limit = 10000
-
+  metric_buffer_limit = 10000000
   ## Collection jitter is used to jitter the collection by a random amount.
   ## Each plugin will sleep for a random time within jitter before collecting.
   ## This can be used to avoid many plugins querying things like sysfs at the
