--- a/systemd/aquabot.service
+++ b/systemd/aquabot.service
@@ -4,6 +4,8 @@ After=multi-user.target
 
 [Service]
 ExecStart=/usr/bin/python3 /home/pmatich/Workshop/AquaBot/temp-sensor.py
+User=pi
+Group=pi
 
 [Install]
 WantedBy=multi-user.target
