--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,52 +1,59 @@
+version: '3.4'
 ###############
 ##### This docker-compose file is based off of the tig-stack - https://github.com/matisku/tig-stack.git
 ###############
-grafana:
-    image: matisq/grafana:latest
-    ports:
-        - 3000:3000
-    links:
-        - influxdb:influxdb
-    environment:
-        GF_SECURITY_ADMIN_USER: admin
-        GF_SECURITY_ADMIN_PASSWORD: admin
-        GF_SECURITY_SECRET_KEY: grafana
-        GF_USERS_ALLOW_SIGN_UP: "true"
-        GF_USERS_ALLOW_ORG_CREATE: "true"
-        GF_AUTH_ANONYMOUS_ENABLED: "true"
-        GF_AUTH_ANONYMOUS_ORG_NAME: grafana
-        GF_DASHBOARDS_JSON_ENABLED: "true"
-        GF_DASHBOARDS_JSON_PATH: /opt/grafana
-        GRAFANA_PLUGINS_ENABLED: "false"
-    volumes_from:
-        - grafana-data
-    restart: always
+services:
+    grafana:
+        image: matisq/grafana:latest
+        ports:
+            - 3000:3000
+        links:
+            - influxdb:influxdb
+        environment:
+            GF_SECURITY_ADMIN_USER: admin
+            GF_SECURITY_ADMIN_PASSWORD: admin
+            GF_SECURITY_SECRET_KEY: grafana
+            GF_USERS_ALLOW_SIGN_UP: "true"
+            GF_USERS_ALLOW_ORG_CREATE: "true"
+            GF_AUTH_ANONYMOUS_ENABLED: "true"
+            GF_AUTH_ANONYMOUS_ORG_NAME: grafana
+            GF_DASHBOARDS_JSON_ENABLED: "true"
+            GF_DASHBOARDS_JSON_PATH: /opt/grafana
+            GRAFANA_PLUGINS_ENABLED: "false"
+        # volumes_from:
+        #     - grafana-data
+        restart: always
 
-grafana-data:
-    image: busybox
-    tty: true
-    volumes:
-        - /var/lib/grafana
-        - /var/log/grafana
-        - /var/lib/grafana/plugins
+    grafana-data:
+        image: busybox
+        tty: true
+        # volumes:
+        #     - /var/lib/grafana
+        #     - /var/log/grafana
+        #     - /var/lib/grafana/plugins
 
-influxdb:
-    image: matisq/influxdb:latest
-    ports:
-        - 8083:8083
-        - 8086:8086
-    environment:
-        INFLUX_DATABASE: "telegraf"
-        INLFUX_ADMIN_USER: "grafana"
-        INFLUX_ADMIN_PASS: "grafana"
-    volumes_from:
-        - influxdb-data
+    influxdb:
+        image: matisq/influxdb:latest
+        ports:
+            - 8083:8083
+            - 8086:8086
+        environment:
+            INFLUX_DATABASE: "telegraf"
+            INLFUX_ADMIN_USER: "grafana"
+            INFLUX_ADMIN_PASS: "grafana"
+        # volumes_from:
+        #     - influxdb-data
 
-influxdb-data:
-    image: busybox
-    tty: true
-    volumes:
-        - /var/lib/influxdb
+    influxdb-data:
+        image: busybox
+        tty: true
+        volumes:
+            - /var/lib/influxdb
+
+    importer:
+        build: importer
+        volumes:
+             - ./importer/credentials/aws:/root/.aws
 
 # telegraf:
 #     build: telegraf
